created php dockerfile and other modifications

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,10 @@ services:
     ports: 
       - 80:80
     volumes:
-      - ./src:/var/www/html/src
+      - ./src:/var/www/html
     depends_on:
       - mysql
+      - php
   mysql:
     image: mysql:5.7
     ports:
@@ -22,3 +23,9 @@ services:
       MYSQL_ROOT_PASSWORD: secret
     volumes:
       - ./mysql:/var/lib/mysql
+  php:
+    build:
+      context: .
+      dockerfile: php.dockerfile
+    volumes:
+      - ./src:/var/www/html
